--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,15 @@
 asgiref==3.8.1
+certifi==2024.2.2
+charset-normalizer==3.3.2
 Django==5.0.4
+django-cors==0.1
+django-cors-headers==4.3.1
 djangorestframework==3.15.1
-djangorestframework-jwt==1.11.0
 djangorestframework-simplejwt==5.3.1
+idna==3.7
 mysqlclient==2.2.4
 PyJWT==1.7.1
 python-dotenv==1.0.1
+requests==2.31.0
 sqlparse==0.5.0
+urllib3==2.2.1
